# python-project-50

./: .coverage  .gitignore  README.md  TEST  coverage.xml  flat  flat.cast  json.cast  jsonyaml.cast  my_recording.cast  my_recording2.cast  plain.cast  pyproject.toml  recurs.cast  setup.py
.github/workflows/: main.yml
TEST2/: file220.json  file3.json
gendiff/: .gitignore  __init__.py  build_diff.py  cli.py  diff_builder.py  diff_generator.py  parser.py
gendiff/formater/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: __init__.py  diff_test.py
tests/fixtures/: file1.yml  file2.yml  result_json.txt  result_json_flat.txt  test.txt  testfix.txt
